# Deloy_Build

./: .env.example  .gitignore  DELIVERY_SUMMARY.md  DEPLOYMENT_GUIDE.md  FILE_MAP.md  FIX_SUMMARY.md  QUICKSTART.md  README.md  START.sh  START_REAL.sh  deploy.sh  test_ws.py
research-kit/backend/: .env.example  2.0  alembic.ini  pyproject.toml  requirements.txt
research-kit/backend/alembic/: env.py
research-kit/backend/alembic/versions/: 0001_initial.py  0002_paper_content.py  0003_verify_and_paper_scope_cache.py  0004_inbox_archived_at.py  0005_drafts.py  0006_conflict_resolved.py  0007_claim_conflicts_checked_at.py
research-kit/backend/app/: config.py  db.py  deps.py  errors.py  idempotency.py  logging.py  main.py  main_openai.py  middleware.py  openalex.py  pdf_fetch.py  redis_pool.py  verify_service.py
research-kit/backend/app/auth/: google.py  session.py
research-kit/backend/app/events/: replay.py
research-kit/backend/tests/: auth_fakes.py  conftest.py  test_api.py  test_auth_endpoints.py  test_chat_context.py  test_claims.py  test_config.py  test_conflict_confirm.py  test_conflict_detect.py  test_conflicts.py  test_deps_user.py  test_draft_export.py  test_draft_repo.py  test_draft_schemas.py  test_errors.py  test_google_verify.py  test_health.py  test_inbox.py  test_logging.py  test_migrations.py  test_openalex.py  test_projects_endpoints.py  test_projects_repo.py  test_provider_field.py  test_runs_cancel.py  test_runs_post.py  test_runs_repo.py  test_sessions.py  test_sse_replay_no_dup.py  test_verify_router.py  test_verify_service.py
(+314 files in other folders)
