[project]
name = "rk-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "redis[hiredis]>=5.0",
"httpx>=0.27",
  "openai>=1.40",
  "google-auth>=2.30",
  "structlog>=24.1",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1",
  "mcp[cli]>=1.5",
  "fastmcp>=2.0",
  "pypdf>=4.0",
  "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "testcontainers[postgres,redis]>=4.7",
  "factory-boy>=3.3",
  "respx>=0.21",
  "ruff>=0.5",
  "psycopg2-binary>=2.9",
  "pyjwt[crypto]>=2.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "contract: requires live GoClaw at GOCLAW_URL",
]

[tool.ruff]
line-length = 100
target-version = "py312"
